Work on task#2-Entities CRUD,Security,Validation